# camera_winrt

./: Cargo.toml  README.md  build.rs
src/: fps_counter.rs  id_manager.rs  main.rs
