[package]
name = "capture"
version = "0.1.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = "0.7.2"
async-std = { version = "1.6.0", features = ["attributes"] }
minifb = "0.19.1"
image = "0.23.10"

[build-dependencies]
winrt = "0.7.2"

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
